<resources>
    <string name="app_name">Shaper</string>
    <string name="login_title">With shaper \nyou never \nforget</string>
    <string name="login_subtitle">Using shaper you can add and edit \nTo-Do lists and get reminded to \nmake sure you never forget them.</string>
    <string name="sign_with_google">Continue with Google</string>
    <string name="l">lmk;</string>
    <string name="activity_main_title">To-Do List</string>
    <string name="day_mon">Mon</string>
    <string name="day_sun">Sun</string>
    <string name="day_sat">Sat</string>
    <string name="day_fri">Fri</string>
    <string name="day_thu">Thu</string>
    <string name="day_wed">Wed</string>
    <string name="day_tue">Tue</string>
    <string name="add_task">Add Task</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="no_reminder">No Reminder</string>
    <string name="add">Add</string>
    <string name="to_do_list">To-Do List</string>
    <string name="night_mode">Night Mode</string>
    <string name="reminder">Reminder</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="empty_tasks">There are no tasks for the day</string>
    <string name="today">Today</string>
    <string name="auto">Auto</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="support_email">Contact me at\n<a href="shahryar.kh78@gmail.com">shahryar.kh78@gmail.com</a></string>
    <string name="support_repo">Shaper repository on <a href="https://github.com/5hahryar">github</a></string>
    <string name="title">Title</string>
    <string name="empty_title_error">Title can\'t be empty</string>
    <string name="on_task_added">New task added successfully.</string>
    <string name="separator">Separator</string>
    <string name="question_mark">Question mark</string>
    <string name="delete_task">Task removed successfully.</string>
    <string name="undo">Undo</string>
    <string name="repeat_every">Repeat every</string>
    <string name="days">days</string>
    <string name="_1">1</string>
</resources>