<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.sloupycom.shaper.viewmodel.SettingsViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bottom_sheet_background" android:paddingBottom="@dimen/margin_end">

        <ImageView
            android:id="@+id/indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_indicator"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/separator" />

        <LinearLayout
            android:id="@+id/settingsLayout"
            android:layout_width="match_parent"
            android:layout_height="80dp"

            android:orientation="vertical"
            android:paddingStart="@dimen/margin_start"
            android:paddingEnd="@dimen/margin_end"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextH5"
                    android:layout_alignParentStart="true"
                    android:textSize="20sp"
                    android:text="@string/night_mode"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:id="@+id/textView_nightMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextH5"
                    android:layout_alignParentEnd="true"
                    android:textSize="18sp"
                    android:text="@{viewModel.nightMode}"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="@drawable/ripple_effect"
                    android:textColor="@color/colorOnPrimaryAlpha"
                    tools:ignore="RelativeOverlap"
                    android:onClick="@{(view) -> viewModel.onClick(view)}"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextH5"
                    android:layout_alignParentStart="true"
                    android:textSize="20sp"
                    android:text="@string/reminder"/>

                <TextView
                    android:id="@+id/textView_reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="1dp"
                    android:text="@{viewModel.reminder}"
                    android:textAppearance="@style/TextH5"
                    android:textColor="@color/colorOnPrimaryAlpha"
                    android:textSize="18sp"
                    android:clickable="true"
                    android:focusable="true"
                    tools:ignore="RelativeOverlap"
                    android:onClick="@{(view) -> viewModel.onClick(view)}"/>

            </RelativeLayout>

        </LinearLayout>

        <View
            android:id="@+id/devider_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/settingsLayout"
            android:layout_marginTop="@dimen/margin_start"
            android:background="@color/colorSeparator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/devider_2"
            android:layout_marginTop="@dimen/margin_start"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/supportButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/ripple_effect"
                android:gravity="center"
                android:onClick="@{(view) -> viewModel.onClick(view)}">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_help_outline_24px"
                    app:tint="@color/colorOnPrimaryAlpha"
                    android:contentDescription="@string/question_mark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/support"
                    android:textAppearance="@style/TextButton"
                    android:textColor="@color/colorOnPrimaryAlpha"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/logoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/ripple_effect"
                android:layout_toEndOf="@id/supportButton"
                android:layout_marginStart="100dp"
                android:alpha="0.3">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_login_24px"
                    app:tint="@color/colorOnPrimaryAlpha"
                    android:contentDescription="@string/logout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textAppearance="@style/TextButton"
                    android:textColor="@color/colorOnPrimaryAlpha"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>
</layout>